--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 * {
     background-color: #151515;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+a {
+    text-decoration: none;
+    color: #C73659;
+}
+a:hover {
+    color: black;
 }
 
 .title {
@@ -15,5 +23,8 @@
 }
 
 ul {
-    
+    list-style: none;
+    text-align:center;
+    align-content: space-between;
 }
+
